Show address pool gap field on wallet

--- a/views/wallet.erb
+++ b/views/wallet.erb
@@ -171,6 +171,11 @@
            <% end %>
          <% end %>
 
+         <% if wal['address_pool_gap'] %>
+         <small>
+           <b>Address pool gap:</b> <%= wal['address_pool_gap'] %>
+         </small><br/>
+         <% end %>
            <%
            # unless url_path.include? "byron"
               if addrs
