Add inspect address

--- a/views/main_nav.erb
+++ b/views/main_nav.erb
@@ -46,6 +46,14 @@
     </div>
   </li>
   <li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle <%="disabled" unless session[:w_connected]%>"
+      data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Misc</a>
+    <div class="dropdown-menu">
+      <a class="dropdown-item" href="/inspect-address">Inspect Address</a>
+      <!-- <a class="dropdown-item" href="/submit-external-tx">Submit External Transaction</a> -->
+    </div>
+  </li>
+  <li class="nav-item dropdown">
     <a class="nav-link dropdown-toggle"
       data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Tools</a>
     <div class="dropdown-menu">
