--- a/views/network_info.erb
+++ b/views/network_info.erb
@@ -1,20 +1,24 @@
 <%
  n = network_info
 %>
+
 <div class="list-group">
   <div class="list-group-item">
      Network information (from wallet backend)
      <small><a href="/network-info">refresh</a></small>
   </div>
+
   <div class="list-group-item">
     <% if n['network_tip'] %>
     <small><b>Network tip: </b></small><br/>
     <small>&nbsp;&nbsp;<b>Epoch: </b><%= n['network_tip']['epoch_number'] %></small><br/>
     <small>&nbsp;&nbsp;<b>Slot: </b><%= n['network_tip']['slot_number'] %></small><br/>
+    <small>&nbsp;&nbsp;<b>Absloute Slot: </b><%= n['network_tip']['absolute_slot_number'] %></small><br/>
     <% end %>
     <small><b>Node tip: </b></small><br/>
     <small>&nbsp;&nbsp;<b>Epoch: </b><%= n['node_tip']['epoch_number'] %></small><br/>
     <small>&nbsp;&nbsp;<b>Slot: </b><%= n['node_tip']['slot_number'] %></small><br/>
+    <small>&nbsp;&nbsp;<b>Absolute Slot: </b><%= n['node_tip']['absolute_slot_number'] %></small><br/>
     <small>&nbsp;&nbsp;<b>Height: </b><%= "#{n['node_tip']['height']['quantity']} block" %></small><br/>
     <small>
     <b>Status:</b> <%= n['sync_progress']['status'] %>
