Use json2table to display Network info/params/clock and Inspect Address

--- a/views/form_inspect_address.erb
+++ b/views/form_inspect_address.erb
@@ -1,12 +1,13 @@
 
 <div class="list-group">
-
+  <div class="list-group-item">
+     Inspect Address
+  </div>
   <div class="list-group-item">
     <form action="/inspect-address-now" method="GET">
       <div class="form-group">
-        <label for="addr_id">Address</label>
         <input type="text" class="form-control" name="addr_id" id="addr_id"
-            placeholder="Name" value="<%= id %>">
+            placeholder="Address" value="<%= id %>">
         <small id="help" class="form-text text-muted">Paste or type address.</small>
       </div>
 
@@ -16,13 +17,9 @@
 
   <% if address_details %>
   <div class="list-group-item"  >
-    <!-- <small id="address_details"> -->
-      <code>
-        <%= address_details.to_s.gsub("\",","\",<br/>").
-                                 gsub("{","{<br/>").
-                                 gsub("}",",<br/>}") %>
-      <code>
-    <!-- </small> -->
+    <small id="address_details">
+        <%= json2table(address_details.to_s) %>
+    </small>
   </div>
   <% end %>
 </div>
