--- a/views/main_nav.erb
+++ b/views/main_nav.erb
@@ -45,6 +45,7 @@
       <a class="dropdown-item" href="/network-clock">Network Clock</a>
       <a class="dropdown-item" href="/inspect-address">Inspect Address</a>
       <a class="dropdown-item" href="/submit-external-tx">Submit External Transaction</a>
+      <a class="dropdown-item" href="/settings">Settings</a>
     </div>
   </li>
   <li class="nav-item dropdown">
