--- a/views/main_nav.erb
+++ b/views/main_nav.erb
@@ -43,8 +43,11 @@
       <a class="dropdown-item" href="/network-info">Network Information</a>
       <a class="dropdown-item" href="/network-params">Network Parameters</a>
       <a class="dropdown-item" href="/network-clock">Network Clock</a>
+      <div class="dropdown-divider"></div>
       <a class="dropdown-item" href="/inspect-address">Inspect Address</a>
+      <div class="dropdown-divider"></div>
       <a class="dropdown-item" href="/submit-external-tx">Submit External Transaction</a>
+      <div class="dropdown-divider"></div>
       <a class="dropdown-item" href="/settings">Settings</a>
     </div>
   </li>
