adjust tx rendering

--- a/views/rewards.erb
+++ b/views/rewards.erb
@@ -26,25 +26,7 @@ min = params['minWithdrawal']
   </div>
   <div class="list-group-item">
     <% transactions.each do |tx|  %>
-        <small><b>ID: </b><a href="/wallets/<%= wid %>/txs/<%= tx['id'] %>">
-          <%= tx['id']%></a>
-        </small><br/>
-        <% if tx['inserted_at']%>
-            <small><b>Inserted at: </b></small><br/>
-            <small>&nbsp;&nbsp;<b>Time: </b><%= tx['inserted_at']['time'] %></small>
-            <small>&nbsp;&nbsp;<b>(Block: </b><%= tx['inserted_at']['block']['height']['quantity'] %>, </small>
-            <small>&nbsp;&nbsp;<b>Epoch: </b><%= tx['inserted_at']['block']['epoch_number'] %>, </small>
-            <small>&nbsp;&nbsp;<b>Slot: </b><%= tx['inserted_at']['block']['slot_number'] %>)</small><br/>
-        <% end %>
-        <% if tx['withdrawals']%>
-        <small><b>Withdrawals: </b><%= tx['withdrawals'].size %></small><br/>
-        <% tx['withdrawals'].each do |out| %>
-            <small>&nbsp;&nbsp;<b>Amount: </b><%= out['amount']['quantity'] %></small><br/>
-            <small>&nbsp;&nbsp;<b>Stake Address: </b><%= out['stake_address'] %></small><br/>
-            <b>---</b> <br/>
-          <% end %>
-        <% end %>
-
+    <%= render_tx_on_wallet_page("/wallets", tx, wid) %>
     <% end %>
   </div>
 </div>
