--- a/views/form_coin_selection.erb
+++ b/views/form_coin_selection.erb
@@ -1,32 +1,49 @@
 <%
-  ep = "/wallets"
+  url_path = request.env['PATH_INFO'].to_s
   wid = params[:wid] if params[:wid]
+  byron_ep = "/byron-wallets"
+  shelley_ep = "/wallets"
 %>
 <div class="list-group">
   <div class="list-group-item">
      Coin Selection - random
-     | <small><a href="<%= "#{ep}/#{wid}" %>">
+     | <small><a href="<%= (url_path.include? "byron") ? byron_ep : shelley_ep %>/<%= wid %>">
              go back to wallet
            </a></small>
   </div>
   <div class="list-group-item">
-    <form action="/coin-selection/random" method="POST">
+    <form action="<%= (url_path.include? "byron") ? byron_ep : shelley_ep %>/coin-selection/random" method="POST">
       <div class="form-group">
+        <label for="wid">Source Wallet</label>
+        <select class="form-control" name="wid" id="wid">
+          <% wallets.each do |w| %>
+          <option <%= wid == w['id'] ? "selected" : "" %> value="<%= w['id'] %>">
+            <%= "#{w['name']} [id: #{w['id']}, balance available: #{w['balance']['available']['quantity']}]" %>
+          </option>
+          <% end %>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="addr_amt">Address : Amount</label>
         <textarea class="form-control" name="addr_amt" id="addr_amt" rows="5"><%= addr_amt if addr_amt %></textarea>
         <small id="help" class="form-text text-muted">
 
           <details>
             <summary><i>address:amount</i> per line.</summary>
             <code>
+              Testnet:<br/><br/>
 37btjrVyb4KF6KtvXYUxDHqjAwfKAuDzP71UEuG6vh87rjstvB8o1Muu6KaeGAF8xZro63Zc5VAYNnQtcci4vT8jhLuNtwku9x1YgS18LHFAhxxTi8:1000000
 <br/>2cWKMJemoBakujqtRy1FT978A3dLJcc1vXKzGTxxhsShkRL8YDUreEje2GqaC3en5TtCc:1000000
 <br/>addr1qrvc39e0lampjjpg0z65z0pccjvpg502c738s3kyam755rhl0dw5r75vk42mv3ykq8vyjeaanvpytg79xqzymqy5acmqjdm7lg:1000000
+<br/><br/>Mainnet:<br/><br/>
+addr1q95vgw8r27wtsm7efxulnh6mx6r6fh6q35p4pv6zr4eraef7y5xc6cr99fsj8w0hqksgwv3enatmz9ulpp6zn2kuskaqmqda5n:1000000
+<br/>addr1qxxkaq0d3c739xf0gdj0jdf0rel7azpqkskn8y6c5fusvue7y5xc6cr99fsj8w0hqksgwv3enatmz9ulpp6zn2kuskaqarfnmd:1000000
+
             </code>
           </details>
 
         </small>
       </div>
-      <input type="hidden" name="wid" value="<%= wid %>"/>
       <button type="submit" class="btn btn-success">Verify</button>
     </form>
   </div>
