--- a/views/main_nav.erb
+++ b/views/main_nav.erb
@@ -32,6 +32,7 @@
       <a class="dropdown-item" href="/stake-pools-list?stake=1000000000">List</a>
       <a class="dropdown-item" href="/stake-pools-join">Join</a>
       <a class="dropdown-item" href="/stake-pools-quit">Quit</a>
+      <a class="dropdown-item" href="/stake-pools-fee">Fees</a>
     </div>
   </li>
 
