--- a/views/show_migration_fee.erb
+++ b/views/show_migration_fee.erb
@@ -1,21 +1,38 @@
 <%
  mf = migration_fee
  url_path = request.env['PATH_INFO'].to_s
- byron_ep = "/byron-wallets/#{wallet_id}"
- shelley_ep = "/wallets/#{wallet_id}"
- byron_migr_ep = "/byron-wallets-migration-fee/#{wallet_id}"
- shelley_migr_ep = "/wallets-migration-fee/#{wallet_id}"
+ byron_ep = "/byron-wallets/#{wid}"
+ shelley_ep = "/wallets/#{wid}"
+ byron_migr_ep = "/byron-wallets-migration-fee?wid=#{wid}"
+ shelley_migr_ep = "/wallets-migration-fee?wid=#{wid}"
 %>
 
 <div class="list-group">
   <div class="list-group-item">
      Migration fee
-     <small><a href="<%= (url_path.include? "byron") ? byron_migr_ep : shelley_migr_ep %>">refresh</a></small>
      | <small><a href="<%= (url_path.include? "byron") ? byron_ep : shelley_ep %>">go back to wallet</a></small>
   </div>
   <div class="list-group-item">
-    <small><b>Migration fee: </b>
-      <%= "#{mf['migration_cost']['quantity']} #{mf['migration_cost']['unit']}" %>
+    <form action="<%= (url_path.include? "byron") ? byron_migr_ep : shelley_migr_ep %>" method="GET">
+      <div class="form-row">
+        <div class="col">
+          <select class="form-control" name="wid" id="wid">
+            <% wallets.each do |w| %>
+            <option <%= wid == w['id'] ? "selected" : "" %> value="<%= w['id'] %>">
+              <%= "#{w['name']} [id: #{w['id']}, balance available: #{w['balance']['available']['quantity']}]" %>
+            </option>
+            <% end %>
+          </select>
+        </div>
+        <div class="col">
+          <button type="submit" class="btn btn-success">Refresh</button>
+        </div>
+      </div>
+    </form>
+  </div>
+  <div class="list-group-item">
+    <small id="mf">
+        <%= json2table(mf.to_s) if wid %>
     </small>
   </div>
 </div>
