--- a/views/wallet.erb
+++ b/views/wallet.erb
@@ -51,7 +51,7 @@
                data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Migrations</a>
              <div class="dropdown-menu">
                <a class="dropdown-item" href="/wallets-migrate?wid=<%= id %>">Migrate</a>
-               <a class="dropdown-item" href="/wallets-migration-fee/<%= id %>">Calculate cost</a>
+               <a class="dropdown-item" href="/wallets-migration-fee?wid=<%= wal['id'] %>">Fees</a>
              </div>
            </div>
            <div>
@@ -64,7 +64,7 @@
                   href="/stake-pools-quit<%="?wid=#{wal['id']}"%><%= "&sid=#{wal['delegation']['target']}" if wal['delegation']%>">
                   Quit Stakepool
                 </a>
-               <a class="dropdown-item" href="/stake-pools-fee/<%= wal['id'] %>" >Delegation fees</a>
+               <a class="dropdown-item" href="/stake-pools-fee?wid=<%= wal['id'] %>" >Fees</a>
              </div>
            </div>
            <div>
@@ -74,7 +74,7 @@
                <a class="dropdown-item" href="/wallets/coin-selection/random?wid=<%= wal['id'] %>">Random</a>
              </div>
            </div>
-           <a class="nav-link" href="/wallets/<%= wal['id']%>/utxo">UTxO</a>
+           <a class="nav-link" href="/wallets-utxo?wid=<%= wal['id'] %>">UTxO</a>
 
            <!-- <a class="nav-link" href="#" onClick="showIt('utxo_show')">UTxO</a>   -->
          </nav>
@@ -109,7 +109,7 @@
             </a>
             <div class="dropdown-menu">
               <a class="dropdown-item" href="/byron-wallets-migrate?wid=<%= id %>">Migrate</a>
-              <a class="dropdown-item" href="/byron-wallets-migration-fee/<%= id %>">Calculate cost</a>
+              <a class="dropdown-item" href="/byron-wallets-migration-fee?wid=<%= wal['id'] %>">Fees</a>
             </div>
           </div>
           <div>
@@ -130,7 +130,7 @@
               <a class="dropdown-item" href="/byron-wallets/coin-selection/random?wid=<%= wal['id'] %>">Random</a>
             </div>
           </div>
-          <a class="nav-link" href="/byron-wallets/<%= id %>/utxo">UTxO</a>
+          <a class="nav-link" href="/byron-wallets-utxo?wid=<%= wal['id'] %>">UTxO</a>
         </nav>
     <% end %>
 
