--- a/views/wallet.erb
+++ b/views/wallet.erb
@@ -42,7 +42,7 @@
              <div class="dropdown-menu">
                <a class="dropdown-item" href="/tx-between-wallets?wid=<%= id %>">Between my wallets</a>
                <a class="dropdown-item" href="/tx-to-address?wid=<%= id %>">To address</a>
-               <a class="dropdown-item" href="/tx-fee-to-address?wid=<%= id %>">Payment fees</a>
+               <a class="dropdown-item" href="/tx-fee-to-address?wid=<%= id %>">Fees</a>
                <a class="dropdown-item" href="/rewards?wid=<%= id %>&minWithdrawal=1">Rewards history</a>
              </div>
            </div>
@@ -99,7 +99,7 @@
             </a>
             <div class="dropdown-menu">
               <a class="dropdown-item" href="/byron-tx-to-address?wid=<%= id %>">To address</a>
-              <a class="dropdown-item" href="/byron-tx-fee-to-address?wid=<%= id %>">Payment fees</a>
+              <a class="dropdown-item" href="/byron-tx-fee-to-address?wid=<%= id %>">Fees</a>
             </div>
           </div>
           <div>
