--- a/views/form_tx_between_wallets.erb
+++ b/views/form_tx_between_wallets.erb
@@ -6,6 +6,13 @@ shelley_ep = "/tx-between-wallets"
 wid = params[:wid] if params[:wid]
 %>
 <div class="list-group">
+  <div class="list-group">
+    <div class="list-group-item">
+      Transaction between Shelley wallets
+      | <small><a href="<%= (url_path.include? "byron") ? "/byron-wallets/#{wid}" : "/wallets/#{wid}" %>">
+          go back to wallet
+        </a></small>
+    </div>
   <div class="list-group-item">
     <form action="<%= (url_path.include? "byron") ? byron_ep : shelley_ep %>" method="POST">
       <div class="form-group">
