delegation action in coin selection

--- a/views/wallet.erb
+++ b/views/wallet.erb
@@ -72,6 +72,7 @@
                data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Coin Selection</a>
              <div class="dropdown-menu">
                <a class="dropdown-item" href="/wallets/coin-selection/random?wid=<%= wal['id'] %>">Random</a>
+               <a class="dropdown-item" href="/wallets/coin-selection/delegation?wid=<%= wal['id'] %>">Delegation</a>
              </div>
            </div>
            <a class="nav-link" href="/wallets-utxo?wid=<%= wal['id'] %>">UTxO</a>
