--- a/views/main_nav.erb
+++ b/views/main_nav.erb
@@ -47,6 +47,8 @@
       <a class="dropdown-item" href="/submit-external-tx">Submit External Transaction</a>
       <div class="dropdown-divider"></div>
       <a class="dropdown-item" href="/settings">Settings</a>
+      <div class="dropdown-divider"></div>
+      <a class="dropdown-item" href="/sign-metadata">Sign Metadata</a>
     </div>
   </li>
   <li class="nav-item dropdown">
