Nicer handling of response including exemplary curl of the request

--- a/views/form_coin_selection_deleg_action.erb
+++ b/views/form_coin_selection_deleg_action.erb
@@ -58,7 +58,7 @@
   <% if coin_selection %>
   <div class="list-group-item"  >
     <small id="coin_selection">
-        <%= json2table(coin_selection.to_s) %>
+        <%= response2table(coin_selection) %>
     </small>
   </div>
   <% end %>
