--- a/views/form_inspect_address.erb
+++ b/views/form_inspect_address.erb
@@ -18,7 +18,7 @@
   <% if address_details %>
   <div class="list-group-item"  >
     <small id="address_details">
-        <%= json2table(address_details.to_s) %>
+        <%= response2table(address_details) %>
     </small>
   </div>
   <% end %>
