--- a/views/form_settings.erb
+++ b/views/form_settings.erb
@@ -20,7 +20,7 @@
   <% if settings %>
   <div class="list-group-item"  >
     <small id="settings">
-        <%= json2table(settings.to_s) %>
+        <%= response2table(settings) %>
     </small>
   </div>
   <% end %>
