--- a/views/form_tx_external.erb
+++ b/views/form_tx_external.erb
@@ -16,7 +16,7 @@
   <% if tx %>
   <div class="list-group-item"  >
     <small id="address_details">
-        <%= json2table(tx.to_s) %>
+        <%= response2table(tx) %>
     </small>
   </div>
   <% end %>
