--- a/views/show_delegation_fee.erb
+++ b/views/show_delegation_fee.erb
@@ -29,7 +29,7 @@
   </div>
   <div class="list-group-item">
     <small id="df">
-        <%= json2table(df.to_s) if wid %>
+        <%= response2table(df) if wid %>
     </small>
   </div>
 </div>
