--- a/views/show_migration_fee.erb
+++ b/views/show_migration_fee.erb
@@ -32,7 +32,7 @@
   </div>
   <div class="list-group-item">
     <small id="mf">
-        <%= json2table(mf.to_s) if wid %>
+        <%= response2table(mf) if wid %>
     </small>
   </div>
 </div>
