--- a/views/form_coin_selection.erb
+++ b/views/form_coin_selection.erb
@@ -60,7 +60,7 @@ addr1q95vgw8r27wtsm7efxulnh6mx6r6fh6q35p4pv6zr4eraef7y5xc6cr99fsj8w0hqksgwv3enat
   <% if coin_selection %>
   <div class="list-group-item"  >
     <small id="coin_selection">
-        <%= json2table(coin_selection.to_s) %>
+        <%= response2table(coin_selection) %>
     </small>
   </div>
   <% end %>
