--- a/views/network_clock.erb
+++ b/views/network_clock.erb
@@ -8,7 +8,7 @@
   </div>
   <div class="list-group-item">
     <small>
-    <%= json2table(n.to_s) %>
+    <%= response2table(n) %>
     </small>
   </div>
 </div>
