--- a/views/network_params.erb
+++ b/views/network_params.erb
@@ -8,7 +8,7 @@
   </div>
   <div class="list-group-item">
     <small>
-    <%= json2table(p.to_s) %>
+    <%= response2table(p) %>
     </small>
   </div>
 </div>
