--- a/views/form_sign_metadata.erb
+++ b/views/form_sign_metadata.erb
@@ -2,6 +2,9 @@
 <div class="list-group">
   <div class="list-group-item">
      Sign metadata
+     | <small><a href="/wallets/<%= wid %>">
+             go back to wallet
+           </a></small>
   </div>
   <div class="list-group-item">
     <form action="/sign-metadata" method="POST">
