--- a/views/wallet.erb
+++ b/views/wallet.erb
@@ -75,6 +75,15 @@
                <a class="dropdown-item" href="/wallets/coin-selection/delegation?wid=<%= wal['id'] %>">Delegation</a>
              </div>
            </div>
+           <div>
+             <a class="nav-link dropdown-toggle"
+               data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Keys</a>
+             <div class="dropdown-menu">
+               <a class="dropdown-item" href="/sign-metadata?wid=<%= wal['id'] %>">Sign Metadata</a>
+               <a class="dropdown-item" href="/get-pub-key?wid=<%= wal['id'] %>">Get public key</a>
+             </div>
+           </div>
+
            <a class="nav-link" href="/wallets-utxo?wid=<%= wal['id'] %>">UTxO</a>
 
            <!-- <a class="nav-link" href="#" onClick="showIt('utxo_show')">UTxO</a>   -->
