Support construct address from script and pub key (without chain code)

--- a/views/main_nav.erb
+++ b/views/main_nav.erb
@@ -43,6 +43,7 @@
       <a class="dropdown-item" href="/network-clock">Network Clock</a>
       <div class="dropdown-divider"></div>
       <a class="dropdown-item" href="/inspect-address">Inspect Address</a>
+      <a class="dropdown-item" href="/construct-address">Construct Address</a>
       <div class="dropdown-divider"></div>
       <a class="dropdown-item" href="/submit-external-tx">Submit External Transaction</a>
       <div class="dropdown-divider"></div>
