--- a/views/main_nav.erb
+++ b/views/main_nav.erb
@@ -30,6 +30,7 @@
       <a class="dropdown-item" href="/stake-pools-join">Join</a>
       <a class="dropdown-item" href="/stake-pools-quit">Quit</a>
       <a class="dropdown-item" href="/stake-pools-fee">Fees</a>
+      <a class="dropdown-item" href="/stake-pools-maintenance">Maintenance</a>
     </div>
   </li>
 
