curl on utxo distribution

--- a/views/utxo_details.erb
+++ b/views/utxo_details.erb
@@ -29,6 +29,7 @@
               <button type="submit" class="btn btn-success">Refresh</button>
             </div>
           </div>
+          <small><%= generate_curl(utxo) %></small>
         </form>
       </div>
       <div class="list-group-item">
