--- a/views/wallet.erb
+++ b/views/wallet.erb
@@ -41,7 +41,8 @@
                data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Transactions</a>
              <div class="dropdown-menu">
                <a class="dropdown-item" href="/tx-between-wallets?wid=<%= id %>">Between my wallets</a>
-               <a class="dropdown-item" href="/tx-to-address?wid=<%= id %>">To address</a>
+               <a class="dropdown-item" href="/tx-to-address?wid=<%= id %>">To single address</a>
+               <a class="dropdown-item" href="/tx-to-multi-address?wid=<%= id %>">To many addresses</a>
                <a class="dropdown-item" href="/tx-fee-to-address?wid=<%= id %>">Fees</a>
                <a class="dropdown-item" href="/rewards?wid=<%= id %>&minWithdrawal=1">Rewards history</a>
              </div>
