--- a/views/form_tx_to_multi_address.erb
+++ b/views/form_tx_to_multi_address.erb
@@ -1,11 +1,17 @@
 <%
  # wallets = wallets
 url_path = request.env['PATH_INFO'].to_s
-byron_ep = "/byron-tx-fee-to-address"
-shelley_ep = "/tx-fee-to-address"
+byron_ep = "/byron-tx-to-address"
+shelley_ep = "/tx-to-address"
 wid = params[:wid] if params[:wid]
 %>
 <div class="list-group">
+  <div class="list-group-item">
+    Transaction
+    | <small><a href="<%= (url_path.include? "byron") ? "/byron-wallets/#{wid}" : "/wallets/#{wid}" %>">
+        go back to wallet
+      </a></small>
+  </div>
   <div class="list-group-item">
     <form action="<%= (url_path.include? "byron") ? byron_ep : shelley_ep %>" method="POST">
       <div class="form-group">
@@ -17,28 +23,23 @@ wid = params[:wid] if params[:wid]
           </option>
           <% end %>
         </select>
+        <label for="pass">Passphrase</label>
+        <input type="text" class="form-control" name="pass" id="pass" placeholder="Passphrase" value="Secure Passphrase">
       </div>
 
-      <div class="form-group">
-        <label for="amount">Amount</label>
-        <input type="text" class="form-control" name="amount" id="amount" placeholder="Amount to send" value="1000000">
+      <%= render_addr_amt %>
 
-      </div>
-
-      <div class="form-group">
-        <label for="address">Address</label>
-        <input type="text" class="form-control" name="address" id="address" placeholder="Address" value="">
-
-      </div>
       <% unless (url_path.include? "byron") %>
         <%= render_tx_shelley_form_part %>
       <% end %>
 
-      <button type="submit" class="btn btn-success">Tx fee</button>
+      <button type="submit" class="btn btn-success">Send Tx</button>
       <%
+        # No send between wallets for Byron
         unless url_path.include? "byron"
       %>
-        (or <a href="/tx-fee-to-multi-address?wid=<%= wid %>">to many addresses</a>)
+        (or <a href="/tx-between-wallets?wid=<%= wid %>">send between wallets</a>
+        / <a href="/tx-to-address?wid=<%= wid %>">to address</a>)
       <% end %>
     </form>
   </div>
